Source/cmPolicies.h
@@ -549,7 +549,10 @@ class cmMakefile;
   SELECT(POLICY, CMP0179,                                                     \
          "De-duplication of static libraries on link lines keeps first "      \
          "occurrence.",                                                       \
-         3, 31, 0, cmPolicies::WARN)
+         3, 31, 0, cmPolicies::WARN)                                          \
+  SELECT(POLICY, CMP0180,                                                     \
+         "project() always sets <PROJECT-NAME>_* as normal variables.", 3,    \
+         31, 0, cmPolicies::WARN)
 
 #define CM_SELECT_ID(F, A1, A2, A3, A4, A5, A6) F(A1)
 #define CM_FOR_EACH_POLICY_ID(POLICY)                                         \
